Pruebas para ver como se ve desde el celular

--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
         </nav>
     </header>
     <main class="main">
-        <section>
-            <img src="" alt="DayisM_dev">
-            <h2><span>Hi! I'm </span>Dayana Meneses</h2>
+        <section class="main__section-container-profile">
+            <div class="main__section-container-profile__content-img">
+                <img src="./public/img/avatar.jpg" alt="DayisM_dev">
+            </div>
+            <h2><span>Hi! I'm Dayana Meneses</span></h2>
             <h4>
                 <span>web developer</span>
                 -
@@ -54,20 +56,25 @@
                 -
                 <span>Desing UI/UX</span>
             </h4>
-            <p>+3 years of experience developing websites.</p> 
+            <p>+3 years of experience developing websites.</p> <!-- 
             <article>
                 <p>like</p>
+            </article> -->
+            <article class="main__section-container-profile__container-social">
+                <p>
+                    <i class="fa-brands fa-facebook"></i> 
+                    <i class="fa-brands fa-github"></i>
+                    <i class="fa-brands fa-whatsapp"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </p>
             </article>
+            <!-- <article>
+                <p>19 age</p>
+                <p>Freelancer</p>
+                <p>Create by 2024</p>
+            </article> -->
             <article>
-                <p>fb, github, whatsapp, lk, tg</p>
-            </article>
-            <article>
-                <p>edad</p>
-                <p>ocupacion</p>
-                <p>creacion</p>
-            </article>
-            <article>
-                <a href="">DOWNLOAD CV</a><!-- 
+                <a href="/">DOWNLOAD CV</a><!-- 
                 <a href="">Ratings and Opinions</a> -->
             </article>
         </section>
