Pruebas para ver como se ve desde el celular

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
             </article> -->
             <article class="main__section-container-profile__container-social">
                 <p>
-                    <i class="fa-brands fa-facebook"></i> 
-                    <i class="fa-brands fa-github"></i>
-                    <i class="fa-brands fa-whatsapp"></i>
-                    <i class="fa-brands fa-linkedin"></i>
+                    <a href="/"><i class="fa-brands fa-facebook"></i></a> 
+                    <a href="/"><i class="fa-brands fa-github"></i></a>
+                    <a href="/"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="/"><i class="fa-brands fa-linkedin"></i></a>
                 </p>
             </article>
             <!-- <article>
@@ -73,12 +73,17 @@
                 <p>Freelancer</p>
                 <p>Create by 2024</p>
             </article> -->
-            <article>
-                <a href="/">DOWNLOAD CV</a><!-- 
+            <article class="main__section-container-profile__container-cv">
+                <a href="/">
+                    <i class="fa-solid fa-circle-down"></i> 
+                    DOWNLOAD CV 
+                    <!-- <i class="fa-solid fa-circle-down"></i> -->
+                    <i class="fa-solid fa-circle-down"></i>
+                </a><!-- 
                 <a href="">Ratings and Opinions</a> -->
             </article>
         </section>
-        <section>
+        <section class="main__section-container-work">
             <h2>Work Experience</h2>
             <p>
                 <span>2023</span> 
@@ -86,26 +91,31 @@
                 <span>Apprenticeship contract. For 6 months I helped in areas of certification and documentation, optimizing the work.</span>
             </p>
         </section>
-        <section>
+        <section class="main__section-container-projects">
             <h2>Proyects</h2>
-            <p>
+            <a href="/">
                 <span>2022</span> 
                 <span>BOT-TELEGRAM:</span>
                 <span>Development of a bot capable of answering user-generated questions with multiple choice, including a qr generator and appointment scheduler.</span>
                 <span>Skill: Python</span>
-            </p>
-            <p>
+            </a>
+            <a href="/">
                 <span>2023</span> 
                 <span>E-COMMERCE:</span> 
                 <span>Creation of an online store as a final project of my technical career, we use the scrum methodology, I was the leader of the fron-end, which is in charge of all the development and creation of the design and link with the back end.</span>
                 <span>Skills: laravel, css, html, javascript, sql/pl, mysql</span>
-            </p>
-            <p>
+            </a>
+            <a href="/">
                 <span>2024</span> 
                 <span>GAME HANGED:</span> 
-                <span>development of a guessing game with login and score, can be played with friends in public or private rooms.</span>
-                <span>Skills: javascript, socket.io, html, css, ejs</span>
-            </p>
+                <span>Development of a guessing game with login and score, can be played with friends in public or private rooms.</span>
+                <span>Skills: 
+                    javascript, 
+                    socket.io, 
+                    html, 
+                    css, 
+                    ejs</span>
+            </a>
             <h4><a href="/">Ver mas</a></h4>
         </section>
     </main>
