Pruebas para ver como se ve desde el celular

--- a/index.html
+++ b/index.html
@@ -137,32 +137,32 @@
                 <span></span>
             </p>
         </section>
-        <section>
+        <section class="aside__section-container-education">
             <h2>Education</h2>
-            <p>
+            <a href="/">
                 <span>2020</span>
                 <span>SECONDARY SCHOOL:</span>
                 <span>La Rivera Institute.</span>
                 <span>Cali, Colombia.</span>
-            </p>
-            <p>
+            </a>
+            <a href="/">
                 <span>2021</span>
                 <span>VIRTUAL COMPLEMENTARY:</span>
                 <span>Conceptualization of the C++ programming language.</span>
                 <span>Cali, Colombia.</span>
-            </p>
-            <p>
+            </a>
+            <a href="/">
                 <span>2022</span>
                 <span>SPECIAL COURSE:</span>
                 <span>Handling Adobe Photoshop CS6 Tools.</span>
                 <span>Cali, Colombia.</span>
-            </p>
-            <p>
+            </a>
+            <a href="/">
                 <span>2024</span>
                 <span>TECHNICAL:</span> 
                 <span>Software programming.</span>
                 <span>Cali, Colombia.</span>
-            </p>
+            </a>
         </section>
     </aside>
     <footer class="footer">
