Pruebas para ver como se ve desde el celular

--- a/index.html
+++ b/index.html
@@ -81,8 +81,25 @@
                     <i class="fa-solid fa-circle-down"></i>
                 </a><!-- 
                 <a href="">Ratings and Opinions</a> -->
+            </article> 
+            <article class="aside__section-container-skills">
+                <h2>Skills</h2>
+                <p>
+                    <span><i class="fa-brands fa-git-alt"></i></span>
+                    <span><i class="fa-brands fa-css3"></i></span>
+                    <span><i class="fa-brands fa-laravel"></i></span>
+                    <span><i class="fa-brands fa-php"></i></span>
+                    <span><i class="fa-brands fa-git"></i></span>
+                    <span><i class="fa-brands fa-node-js"></i></span>
+                    <span><i class="fa-brands fa-js"></i></span>
+                    <span><i class="fa-brands fa-html5"></i></span><!-- 
+                    <span><i class="fa-solid fa-database"></i></span>
+                    <span><i class="fa-solid fa-server"></i></span> -->
+                    <span></span>
+                </p>
             </article>
         </section>
+
         <section class="main__section-container-work">
             <h2>Work Experience</h2>
             <p>
@@ -91,6 +108,7 @@
                 <span>Apprenticeship contract. For 6 months I helped in areas of certification and documentation, optimizing the work.</span>
             </p>
         </section>
+
         <section class="main__section-container-projects">
             <h2>Proyects</h2>
             <a href="/">
@@ -118,25 +136,9 @@
             </a>
             <h4><a href="/">Ver mas</a></h4>
         </section>
+        
     </main>
-
     <aside class="aside">
-        <section>
-            <h2>Skills</h2>
-            <p>
-                <span><i class="fa-brands fa-git-alt"></i></span>
-                <span><i class="fa-brands fa-css3"></i></span>
-                <span><i class="fa-brands fa-laravel"></i></span>
-                <span><i class="fa-brands fa-php"></i></span>
-                <span><i class="fa-brands fa-git"></i></span>
-                <span><i class="fa-brands fa-node-js"></i></span>
-                <span><i class="fa-brands fa-js"></i></span>
-                <span><i class="fa-brands fa-html5"></i></span>
-                <span><i class="fa-solid fa-database"></i></span>
-                <span><i class="fa-solid fa-server"></i></span>
-                <span></span>
-            </p>
-        </section>
         <section class="aside__section-container-education">
             <h2>Education</h2>
             <a href="/">
@@ -166,14 +168,14 @@
         </section>
     </aside>
     <footer class="footer">
-        <h5>Copyright - 2024</h5>
-        <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127450.08734952615!2d-76.60806581779234!3d3.395232266260256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e30a6f0cc4bb3f1%3A0x1f0fb5e952ae6168!2sCali%2C%20Valle%20del%20Cauca!5e0!3m2!1ses-419!2sco!4v1722969379320!5m2!1ses-419!2sco" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <h5>© Copyright - Derechos Reservados - 2024</h5>
+        <!-- <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127450.08734952615!2d-76.60806581779234!3d3.395232266260256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e30a6f0cc4bb3f1%3A0x1f0fb5e952ae6168!2sCali%2C%20Valle%20del%20Cauca!5e0!3m2!1ses-419!2sco!4v1722969379320!5m2!1ses-419!2sco" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <section>
             <h5>Contact Us:</h5>
             <p>Gmail</p>
             <p>Phone</p>
             <p>GitHub</p>
-        </section>
+        </section> -->
     </footer>
 </body>
 </html>
