Pruebas para ver como se ve desde el celular

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <section class="header__container-title">
             <article class="header__container-title__content-title">
-                <h1>DayisM_dev</h1>
+                <h1><span>D</span><span>a</span><span>y</span><span>i</span><span>s</span><span>M</span><span>_</span><span>d</span><span>e</span><span>v</span></h1>
             </article>
         </section>
         <!-- 
@@ -177,5 +177,6 @@
             <p>GitHub</p>
         </section> -->
     </footer>
+    <script src="./public/js/index.js"></script>
 </body>
 </html>
